--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-		"build":"tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "test": "npx jest",
     "dev": "npx tsc && node dist/index.js",
     "start": "ts-node-dev --respawn -- src/index.ts"
   },
@@ -13,10 +13,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.6",
     "husky": "^4.3.8",
+    "jest": "^29.7.0",
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
-        "ts-node-dev": "^2.0.0",
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   },
   "husky": {
@@ -25,4 +28,3 @@
     }
   }
 }
-
