--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: |
           npm ci
+      - name: Unit tests
+        run: |
+          npm run test --if-present
       - name: Build
         run: |
           npm run build
