--- a/package.json
+++ b/package.json
@@ -1,30 +1,31 @@
 {
-  "name": "tparchilog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.ts",
-  "scripts": {
-    "build": "tsc",
-    "test": "npx jest",
-    "dev": "npx tsc && node dist/index.js",
-    "start": "ts-node-dev --respawn -- src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/jest": "^29.5.6",
-    "husky": "^4.3.8",
-    "jest": "^29.7.0",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
-    "ts-jest": "^29.1.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.4"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
-  }
+	"name": "tparchilog",
+	"version": "1.0.0",
+	"description": "",
+	"main": "src/index.ts",
+	"scripts": {
+		"build": "tsc",
+		"test": "npx jest",
+		"test:watch": "npx jest --watch",
+		"dev": "npx tsc && node dist/index.js",
+		"start": "ts-node-dev --respawn -- src/index.ts"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@types/jest": "^29.5.6",
+		"husky": "^4.3.8",
+		"jest": "^29.7.0",
+		"prettier": "^2.8.8",
+		"pretty-quick": "^3.1.3",
+		"ts-jest": "^29.1.1",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.0.4"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "pretty-quick --staged"
+		}
+	}
 }
