--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
+	"dependencies": {
+		"uuid": "^9.0.1"
+	},
 	"devDependencies": {
 		"@types/jest": "^29.5.6",
+		"@types/uuid": "^9.0.7",
 		"husky": "^4.3.8",
 		"jest": "^29.7.0",
 		"prettier": "^2.8.8",
